Fix scrollbar width bug

--- a/src/components/desktop&mobile/footer/styles.module.css
+++ b/src/components/desktop&mobile/footer/styles.module.css
@@ -2,7 +2,7 @@
 
 .footer{
     border-top: 1px solid gray;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     display: flex;
     flex-direction: row;
