--- a/src/components/desktop/navbar/navbar/styles.module.css
+++ b/src/components/desktop/navbar/navbar/styles.module.css
@@ -1,6 +1,6 @@
 .navbar{
     position: fixed;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     padding-left: 35vw;
     padding-right: 35vw;
